2017-10-30 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	Extract object and result parsing into adjustFormatForField and extractQueryRecords

2017-10-30 Riccardo Mottola <rm@gnu.org>

	* DBCSVWriter.m
	* DBHTMLWriter.m
	Don't choke on arrays of objects coming from nested queries.

2017-10-23 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m
	Expand compound address fields.

2017-10-22 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (adjustFormatForField)
	First check for known datatypes, then expand Dictionaries.
	Addresses are complex datatypes and we keep them together.

2017-10-22 Riccardo Mottola <rm@gnu.org>

	* DBSoap.h
	* DBSoap.m
	Accessors for object describe cache and setting.

	* DBSoapCSV.m
	Carry over object cache.

2017-10-22 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m (formatComplexObject:)
	Skip Id field only if it is an empty string, not otherwise.

	* DBSObject.m (description)
	Output type too.

	* DBSoap.m (adjustFormatForField)
	Handle complex objects and distiguish between SF objects and special types like Addresses.

2017-10-18 Riccardo Mottola <rm@gnu.org>

	* DBFileWriter.m (formatComplexObject:)
	Cleanup and optimize nested Field Name concatenation.

2017-10-17 Riccardo Mottola <rm@gnu.org>

	* DBSFTypeWrappers.h
	* DBSFTypeWrappers.m
	* DBFileWriter.m
	* DBCSVWriter.m
	* DBHTMLWriter.m
	New FileType objects to store and wrap specific data types and be able
	to easily identify them after (NSNumber is not flexible for Bool and
	other types are needed). Adapt all Writers.

2017-10-12 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m
	retain/autorelease queryLocator so that it remains usable in the next
	cycle.
	Retain/Release the result record to make it survive the describe cycle.

2017-10-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_queryMore)
	Update to type enhacenemnts implemented in query

2017-10-11 Riccardo Mottola <rm@gnu.org>

	* DBSoap.m (_query)
	Format Objects after describes

2017-10-10 Riccardo Mottola <rm@gnu.org>

	* DBHTMLWriter.m