@@ -1,3 +1,9 @@
+2017-10-31 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m
+	* DBSoap.h
+	Fix setting of enableFieldTypesDescribeForQuery and add accessor.
+
 2017-10-30 Riccardo Mottola <rm@gnu.org>
 
 	* DBSoap.m
